--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -29,6 +29,7 @@
     "@tiptap/extension-text": "^2.0.0-beta.13",
     "@tiptap/react": "^2.0.0-beta.60",
     "@usedapp/core": "^0.4.4",
+    "@web3-react/walletconnect-connector": "^6.2.4",
     "axios": "^0.21.1",
     "next": "11.1.0",
     "react": "17.0.2",
