--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -15,6 +15,7 @@
     "@datepicker-react/styled": "^2.8.0",
     "@ethersproject/units": "^5.4.0",
     "@hacknug/react-icons": "^4.2.1",
+    "@metamask/detect-provider": "^1.2.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@tiptap/extension-bold": "^2.0.0-beta.15",
     "@tiptap/extension-document": "^2.0.0-beta.13",
