--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -15,6 +15,7 @@
     "@datepicker-react/styled": "^2.8.0",
     "@ethersproject/units": "^5.4.0",
     "@hacknug/react-icons": "^4.2.1",
+    "@hookform/resolvers": "^2.8.0",
     "@metamask/detect-provider": "^1.2.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@tiptap/extension-bold": "^2.0.0-beta.15",
@@ -32,6 +33,7 @@
     "@usedapp/core": "^0.4.4",
     "@web3-react/walletconnect-connector": "^6.2.4",
     "axios": "^0.21.1",
+    "is-plain-object": "^2.0.4",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -45,7 +47,8 @@
     "sass": "^1.38.0",
     "styled-components": "^5.3.0",
     "universal-cookie": "^4.0.4",
-    "web3modal": "^1.9.4"
+    "web3modal": "^1.9.4",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
