--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,9 +12,7 @@
   "source": "src/index.ts",
   "main": "build/index.js",
   "typings": "build/index.d.ts",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "dependencies": {
     "@ladjs/graceful": "^1.0.5",
     "@prisma/client": "^2.29.0",
@@ -45,22 +43,20 @@
     "lorem-ipsum": "^2.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
-    "nanoid": "^3.1.23",
+    "nanoid": "^3.1.25",
+    "nexus": "^1.1.0",
     "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "sharp": "^0.28.3",
-    "uuid": "^8.3.2",
-    "winston": "^3.3.3",
-    "nexus": "^1.1.0"
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "prisma": "^2.29.0",
-    "@types/dedent": "^0.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bree": "^6.2.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
+    "@types/dedent": "^0.7.0",
     "@types/express": "^4.17.12",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.4",
@@ -70,7 +66,8 @@
     "@types/node-cron": "^2.0.4",
     "@types/nodemailer": "^6.4.4",
     "@types/sharp": "^0.28.5",
-    "@types/uuid": "^8.3.1"
+    "@types/uuid": "^8.3.1",
+    "prisma": "^2.29.0"
   },
   "prisma": {
     "schema": "./prisma/schema.prisma"
