--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.6",
     "@datepicker-react/styled": "^2.8.0",
+    "@ethersproject/providers": "^5.4.1",
     "@ethersproject/units": "^5.4.0",
     "@hacknug/react-icons": "^4.2.1",
     "@hookform/resolvers": "^2.8.0",
@@ -31,6 +32,9 @@
     "@tiptap/extension-text": "^2.0.0-beta.13",
     "@tiptap/react": "^2.0.0-beta.60",
     "@usedapp/core": "^0.4.4",
+    "@web3-react/abstract-connector": "^6.0.7",
+    "@web3-react/core": "^6.1.1",
+    "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.4",
     "axios": "^0.21.1",
     "is-plain-object": "^2.0.4",
@@ -47,7 +51,6 @@
     "sass": "^1.38.0",
     "styled-components": "^5.3.0",
     "universal-cookie": "^4.0.4",
-    "web3modal": "^1.9.4",
     "yup": "^0.32.9"
   },
   "devDependencies": {
