--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -37,6 +37,8 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.4",
     "axios": "^0.21.1",
+    "detect-it": "^4.0.1",
+    "ethers": "^5.4.1",
     "is-plain-object": "^2.0.4",
     "next": "11.1.0",
     "react": "17.0.2",
