--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -15,6 +15,7 @@
     "@datepicker-react/styled": "^2.8.0",
     "@ethersproject/providers": "^5.4.1",
     "@ethersproject/units": "^5.4.0",
+    "@fontsource/manrope": "^4.5.0",
     "@hacknug/react-icons": "^4.2.1",
     "@hookform/resolvers": "^2.8.0",
     "@metamask/detect-provider": "^1.2.0",
@@ -37,6 +38,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.4",
     "axios": "^0.21.1",
+    "cookie": "^0.4.0",
     "detect-it": "^4.0.1",
     "ethers": "^5.4.1",
     "is-plain-object": "^2.0.4",
