--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -16,6 +16,7 @@
     "@ethersproject/providers": "^5.4.1",
     "@ethersproject/units": "^5.4.0",
     "@fontsource/manrope": "^4.5.0",
+    "@fontsource/source-code-pro": "^4.5.0",
     "@hacknug/react-icons": "^4.2.1",
     "@hookform/resolvers": "^2.8.0",
     "@metamask/detect-provider": "^1.2.0",
