--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -43,6 +43,7 @@
     "detect-it": "^4.0.1",
     "ethers": "^5.4.1",
     "is-plain-object": "^2.0.4",
+    "lodash": "^4.17.21",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
