--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,7 @@
     "graphql-scalars": "^1.10.0",
     "graphql-tag": "^2.12.5",
     "http-status": "^1.5.0",
+    "ipfs-http-client": "^52.0.1",
     "is-plain-object": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "lorem-ipsum": "^2.0.3",
