--- a/.gitignore
+++ b/.gitignore
@@ -107,8 +107,6 @@ typings/
 # nuxt.js build output
 .nuxt
 
-build/
-
 # Uncomment the public line if your project uses Gatsby
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # https://create-react-app.dev/docs/using-the-public-folder/#docsNav
@@ -149,7 +147,8 @@ node_modules/
 /out/
 
 # production
-/build
+live/
+build/
 
 # misc
 .DS_Store
