--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "app:api:dev:watch:nodemon": "NODE_ENV=development env-cmd -f ./.env nodemon --watch ./apps/api/build ./apps/api/build/index.js",
     "app:api:dev:watch:typings": "NODE_ENV=development tsc ./apps/api/src/*.ts --target 'es2018' --moduleResolution 'node' --watch --declaration --esModuleInterop --noEmit --preserveWatchOutput",
     "app:api:build": "NODE_ENV=production rimraf ./apps/api/build && npm run app:api:babel",
+    "app:api:start:live": "node ./apps/api/build/index.js",
     "app:api:start": "node ./apps/api/build/index.js",
     "app:api:babel": "NODE_ENV=production babel ./apps/api/src --out-dir ./apps/api/build --extensions .ts",
     "app:api:lint": "eslint ./apps/api/src --ext .js,.ts --ignore-pattern nexus-typegen.ts",
