--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -46,6 +46,7 @@
     "lodash": "^4.17.21",
     "next": "11.1.0",
     "react": "17.0.2",
+    "react-blockies": "^1.4.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.4",
     "react-hook-form": "^7.12.2",
