removed script config for api

--- a/.env.example
+++ b/.env.example
@@ -7,17 +7,15 @@ IPFS_HTTP_PORT_2=8080
 IPFS_HTTP_PORT_3=8081
 IPFS_HTTP_PORT_4=5001
 
-DEV_DB_PORT=4533
+DEV_DB_PORT=4532
 DEV_FORWARD_MAILHOG_PORT=4026
 DEV_FORWARD_MAILHOG_DASHBOARD_PORT=4404
 
 APP_NAME="Open AR"
-#BASE_URL_DAPP=http://localhost:4400
-#BASE_URL_API=http://localhost:4401
-BASE_URL_DAPP=https://openar.eu.ngrok.io
-BASE_URL_API=https://api.openar.art
+BASE_URL_DAPP=http://localhost:4400
+BASE_URL_API=http://localhost:4401
 
-DATABASE_URL="postgresql://openar:openar@localhost:4533/openar?schema=public&connection_limit=5"
+DATABASE_URL="postgresql://openar:openar@localhost:4532/openar?schema=public&connection_limit=5"
 
 MAIL_MAILER=smtp
 MAIL_HOST=localhost
