--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -60,6 +60,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/react": "17.0.19",
     "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.12",
