--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "dotenv": "^10.0.0",
     "gray-matter": "^4.0.3",
     "raw-loader": "^4.0.2",
-    "react-markdown": "^7.0.1"
+    "react-markdown": "^7.0.1",
+    "remark-gfm": "^2.0.0"
   },
   "prisma": {
     "schema": "./apps/api/prisma/schema.prisma"
