--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -57,6 +57,7 @@
     "redux-localstorage-simple": "^2.4.1",
     "sass": "^1.38.0",
     "styled-components": "^5.3.0",
+    "swiper": "^7.0.1",
     "universal-cookie": "^4.0.4",
     "yup": "^0.32.9"
   },
@@ -65,6 +66,7 @@
     "@types/react": "17.0.19",
     "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.12",
+    "@types/swiper": "^5.4.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "4.3.5"
