add more @openar/crypto code

--- a/packages/crypto/tsconfig.json
+++ b/packages/crypto/tsconfig.json
@@ -14,12 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "outDir": "./build",
+    "outDir": "./dist",
     "declaration": true,
-    "baseUrl": ".",
-    "paths": {
-      "~/*" : ["src/*"]
-    }
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
