--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -43,6 +43,7 @@
     "cookie": "^0.4.0",
     "detect-it": "^4.0.1",
     "ethers": "^5.4.1",
+    "gray-matter": "^4.0.3",
     "is-plain-object": "^5.0.0",
     "lodash": "^4.17.21",
     "next": "11.1.0",
@@ -51,10 +52,12 @@
     "react-dropzone": "^11.3.4",
     "react-hook-form": "^7.12.2",
     "react-icons": "^4.2.0",
+    "react-markdown": "^7.0.1",
     "react-redux": "^7.2.4",
     "react-spinners": "^0.11.0",
     "react-use": "^17.2.4",
     "redux-localstorage-simple": "^2.4.1",
+    "remark-gfm": "^2.0.0",
     "sass": "^1.38.0",
     "styled-components": "^5.3.0",
     "swiper": "^7.0.1",
