--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "app:api:dev": "concurrently -k -p \"[{name}]\" -n \"BABEL,NODE,TS\" -c \"#d531f5,#4d5ffa,#09e3b4\" \"npm run app:api:dev:watch:babel\" \"sleep 5 && npm run app:api:dev:watch:nodemon\" \"sleep 5 && npm run app:api:dev:watch:typings\"",
     "app:api:dev:watch:babel": "NODE_ENV=development babel ./apps/api/src --watch --out-dir ./apps/api/build --extensions .ts",
     "app:api:dev:watch:nodemon": "NODE_ENV=development env-cmd -f ./.env nodemon --watch ./apps/api/build ./apps/api/build/index.js",
-    "app:api:dev:watch:typings": "NODE_ENV=development tsc ./apps/api/src/*.ts --target 'es2018' --moduleResolution 'node' --watch --declaration --esModuleInterop --noEmit --preserveWatchOutput",
+    "app:api:dev:watch:typings": "NODE_ENV=development tsc ./apps/api/src/*.ts --target 'es2021' --moduleResolution 'node' --watch --declaration --esModuleInterop --noEmit --preserveWatchOutput",
     "app:api:build": "NODE_ENV=production rimraf ./apps/api/build && npm run app:api:babel",
     "app:api:deploy": "NODE_ENV=production rimraf ./apps/api/build && rimraf ./apps/api/x && npm run app:api:babel && mv ./apps/api/live ./apps/api/x && mv ./apps/api/build ./apps/api/live && rimraf ./apps/api/x && openar_api_restart",
     "app:api:start:build": "NODE_ENV=production node ./apps/api/build/index.js",
@@ -36,10 +36,16 @@
     "app:dapp:start": "NODE_END=production npm run start -w dapp",
     "app:dapp:build": "NODE_END=production npm run build -w dapp && openar_dapp_restart",
     "app:dapp:dev": "PORT=$(grep DEV_DAPP_PORT .env | cut -d '=' -f2) NEXT_PUBLIC_API_URL=$(grep '^BASE_URL_API' .env | cut -d '=' -f2) npm run dev -w dapp",
-    "app:dapp:lint": "npm run lint -w dapp"
+    "app:dapp:lint": "npm run lint -w dapp",
+
+    "package:crypto:lint": "eslint ./packages/crypto/src --ext .js,.ts",
+    "package:crypto:build": "NODE_ENV=production tsc ./packages/crypto/src/*.ts --target 'es2021' --moduleResolution 'node' --declaration --esModuleInterop"
   },
   "lint-staged": {
     "packages/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ],
+    "apps/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
   },
@@ -75,14 +81,11 @@
     "typescript": "^4.3.5"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "packages/*"
   ],
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "gray-matter": "^4.0.3",
-    "raw-loader": "^4.0.2",
-    "react-markdown": "^7.0.1",
-    "remark-gfm": "^2.0.0"
+    "dotenv": "^10.0.0"
   },
   "prisma": {
     "schema": "./apps/api/prisma/schema.prisma"
