--- a/packages/crypto/.eslintrc.json
+++ b/packages/crypto/.eslintrc.json
@@ -5,11 +5,12 @@
     "es6": true
   },
   "extends": [
-    "airbnb-typescript",
+    "airbnb-typescript/base",
     "plugin:jest/recommended",
+    "plugin:security/recommended",
     "plugin:prettier/recommended"
   ],
-  "plugins": ["jest", "security", "prettier"],
+  "plugins": ["jest", "security", "import", "prettier"],
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module",
@@ -22,10 +23,6 @@
     "consistent-return": "off",
     "jest/expect-expect": "off",
     "security/detect-object-injection": "off",
-    "react/jsx-filename-extension": [
-      1,
-      { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
-    ],
     "import/extensions": [
       "error",
       "ignorePackages",
