--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -54,6 +54,7 @@
     "react-icons": "^4.2.0",
     "react-markdown": "^7.0.1",
     "react-redux": "^7.2.4",
+    "react-remove-scroll": "^2.4.1",
     "react-spinners": "^0.11.0",
     "react-use": "^17.2.4",
     "redux-localstorage-simple": "^2.4.1",
