--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -14,17 +14,25 @@
   "typings": "dist/index.d.ts",
   "scripts": {},
   "dependencies": {
+    "@ethersproject/abstract-signer": "^5.4.1",
+    "@ethersproject/address": "^5.4.0",
     "@ethersproject/bignumber": "^5.4.1",
     "@ethersproject/bytes": "^5.4.0",
+    "@ethersproject/contracts": "^5.4.1",
+    "@ethersproject/providers": "^5.4.5",
     "@openar/contracts": "npm:contracts@^0.1.0",
+    "axios": "^0.21.1",
     "eth-sig-util": "^3.0.1",
     "ethereumjs-util": "^7.1.0",
     "ethers": "^5.4.6",
     "ipfs-http-client": "^52.0.2",
-    "tiny-invariant": "^1.1.0"
+    "sjcl": "^1.0.8",
+    "tiny-invariant": "^1.1.0",
+    "tiny-warning": "^1.0.3"
   },
   "devDependencies": {
     "@types/eth-sig-util": "^2.1.1",
-    "@types/ethereumjs-util": "^6.1.0"
+    "@types/ethereumjs-util": "^6.1.0",
+    "@types/sjcl": "^1.0.30"
   }
 }
