--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -47,6 +47,7 @@
     "is-plain-object": "^5.0.0",
     "lodash": "^4.17.21",
     "next": "11.1.0",
+    "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.4",
