--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -21,6 +21,8 @@
     "@hacknug/react-icons": "^4.2.1",
     "@hookform/resolvers": "^2.8.0",
     "@metamask/detect-provider": "^1.2.0",
+    "@openar/contracts": "^1.0.0",
+    "@openar/crypto": "^1.0.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@tiptap/extension-bold": "^2.0.0-beta.15",
     "@tiptap/extension-document": "^2.0.0-beta.13",
