--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -51,6 +51,7 @@
     "next": "11.1.0",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
+    "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.4",
     "react-hook-form": "^7.12.2",
