--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,13 +40,14 @@
     "graphql-scalars": "^1.10.0",
     "graphql-tag": "^2.12.5",
     "http-status": "^1.5.0",
-    "ipfs-http-client": "^52.0.1",
+    "ipfs-http-client": "^52.0.3",
     "is-plain-object": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "lorem-ipsum": "^2.0.3",
     "minimist": "^1.2.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "mustache": "^4.2.0",
     "nanoid": "^3.1.25",
     "nexus": "^1.1.0",
     "nodemailer": "^6.6.3",
@@ -66,6 +67,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
+    "@types/mustache": "^4.1.2",
     "@types/node": "^16.0.0",
     "@types/node-cron": "^2.0.4",
     "@types/nodemailer": "^6.4.4",
