--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -12,5 +12,5 @@
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
-  "typings": "src/index.d.ts"
+  "typings": "dist/index.d.ts"
 }
