--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,6 +42,7 @@
     "http-status": "^1.5.0",
     "ipfs-http-client": "^52.0.3",
     "is-plain-object": "^5.0.0",
+    "jsdom": "^17.0.0",
     "jsonwebtoken": "^8.5.1",
     "lorem-ipsum": "^2.0.3",
     "minimist": "^1.2.5",
@@ -64,6 +65,7 @@
     "@types/dedent": "^0.7.0",
     "@types/express": "^4.17.12",
     "@types/graphql": "^14.5.0",
+    "@types/jsdom": "^16.2.13",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
