--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -21,11 +21,12 @@
     "@ethersproject/contracts": "^5.4.1",
     "@ethersproject/providers": "^5.4.5",
     "@openar/contracts": "^1.0.0",
-    "ethereumjs-util": "^5.2.1",
     "axios": "^0.21.1",
     "eth-sig-util": "^3.0.1",
+    "ethereumjs-util": "^5.2.1",
     "ethers": "^5.4.6",
     "ipfs-http-client": "^52.0.2",
+    "nanoid": "^3.1.25",
     "sjcl": "^1.0.8",
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3"
@@ -33,6 +34,5 @@
   "devDependencies": {
     "@types/eth-sig-util": "^2.1.1",
     "@types/sjcl": "^1.0.30"
-    
   }
 }
