--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@openar/crypto",
   "version": "1.0.0",
-  "private": true,
   "contributors": [
     {
       "name": "Vincent Van Uffelen"
     }
   ],
-  "type": "module",
   "license": "MIT",
   "source": "src/index.ts",
   "main": "dist/index.js",
+  "private": true,
   "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {},
   "dependencies": {
     "@ethersproject/abstract-signer": "^5.4.1",
@@ -23,7 +25,7 @@
     "@openar/contracts": "^1.0.0",
     "axios": "^0.21.1",
     "eth-sig-util": "^3.0.1",
-    "ethereumjs-util": "^5.2.1",
+    "ethereumjs-util": "^7.0.9",
     "ethers": "^5.4.6",
     "ipfs-http-client": "^52.0.2",
     "nanoid": "^3.1.25",
