--- a/babel.config.json
+++ b/babel.config.json
@@ -15,6 +15,7 @@
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
+        "importHelpers": true,
         "isolatedModules": true,
         "jsx": "preserve",
         "outDir": "./build",
