--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ APP_NAME="Open AR"
 BASE_URL_DAPP=http://localhost:4400
 BASE_URL_API=http://localhost:4401
 
-DATABASE_URL="postgresql://openar:openar@localhost:4532/openar?schema=public&connection_limit=5"
+DATABASE_URL="postgresql://openar:openar@localhost:4532/openar?schema=public"
 
 MAIL_MAILER=smtp
 MAIL_HOST=localhost
