--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "lint": "npm run package:crypto:lint & npm run app:api:lint & npm run app:dapp:lint",
     "start:api": "npm run app:api:start",
     "start:dapp": "npm run app:dapp:start",
-    "dev": "concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#f41788,#c8b320\" \"npm run package:crypto:dev\" \"npm run app:api:dev\" \"npm run app:dapp:dev\"",
+    "dev": "concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#f41788,#c8b320\" \"npm run package:crypto:dev\" \"npm run app:api:dev\" \"sleep 20 && npm run app:dapp:dev\"",
     "dev:dapp": "concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#c8b320\" \"npm run package:crypto:dev\" \"npm run app:dapp:dev\"",
-    "dev:api": "concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#f41788\" \"npm run package:crypto:dev\" \"npm run app:api:dev\"",
+    "dev:api": "concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#f41788\" \"npm run package:crypto:dev\" \"sleep 5 && npm run app:api:dev\"",
     "build:api": "NODE_ENV=production npm run package:crypto:build && npm run app:api:build",
     "app:api:dev": "concurrently -k -p \"[{name}]\" -n \"BABEL,NODE,TS\" -c \"#d531f5,#4d5ffa,#09e3b4\" \"npm run app:api:dev:watch:babel\" \"sleep 5 && npm run app:api:dev:watch:nodemon\" \"sleep 5 && npm run app:api:dev:watch:typings\"",
-    "app:api:dev:watch:babel": "NODE_ENV=development babel ./apps/api/src --watch --out-dir ./apps/api/build --extensions .ts",
+    "app:api:dev:watch:babel": "NODE_ENV=development rimraf ./apps/api/build && babel ./apps/api/src --watch --out-dir ./apps/api/build --extensions .ts",
     "app:api:dev:watch:nodemon": "NODE_ENV=development env-cmd -f ./.env nodemon --watch ./apps/api/build ./apps/api/build/index.js",
     "app:api:dev:watch:typings": "NODE_ENV=development tsc ./apps/api/src/*.ts --target 'es2021' --moduleResolution 'node' --watch --declaration --esModuleInterop --noEmit --preserveWatchOutput",
     "app:api:build": "NODE_ENV=production rimraf ./apps/api/build && npm run app:api:babel",
@@ -35,7 +35,7 @@
     "app:api:db:dev:seed": "NODE_ENV=development dotenv -e .env -- node --loader ts-node/esm ./apps/api/src/db/seeds/resetdb.ts",
     "app:dapp:start": "NODE_END=production npm run start -w dapp",
     "app:dapp:build": "NODE_END=production npm run package:crypto:build && npm run build -w dapp && openar_dapp_restart",
-    "app:dapp:dev": "PORT=$(grep DEV_DAPP_PORT .env | cut -d '=' -f2) NEXT_PUBLIC_API_URL=$(grep '^BASE_URL_API' .env | cut -d '=' -f2) sleep 5 &&  npm run dev -w dapp",
+    "app:dapp:dev": "PORT=$(grep DEV_DAPP_PORT .env | cut -d '=' -f2) NEXT_PUBLIC_API_URL=$(grep '^BASE_URL_API' .env | cut -d '=' -f2) npm run dev -w dapp",
     "app:dapp:lint": "npm run lint -w dapp",
     "package:contracts:lint": "eslint ./packages/contracts/src --ext .js,.ts",
     "package:contracts:build": "NODE_ENV=production rimraf ./packages/contracts/dist && tsc --project ./packages/contracts/tsconfig.json",
