build successfully after npm package update

--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -8,9 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.8",
+    "@apollo/client": "^3.4.13",
     "@chakra-ui/icons": "^1.0.15",
-    "@chakra-ui/react": "^1.6.6",
+    "@chakra-ui/react": "^1.6.8",
     "@datepicker-react/styled": "^2.8.0",
     "@ethersproject/providers": "^5.4.1",
     "@ethersproject/units": "^5.4.0",
@@ -26,16 +26,16 @@
     "@tiptap/extension-bold": "^2.0.0-beta.15",
     "@tiptap/extension-document": "^2.0.0-beta.13",
     "@tiptap/extension-dropcursor": "^2.0.0-beta.18",
-    "@tiptap/extension-gapcursor": "^2.0.0-beta.19",
-    "@tiptap/extension-hard-break": "^2.0.0-beta.15",
+    "@tiptap/extension-gapcursor": "^2.0.0-beta.20",
+    "@tiptap/extension-hard-break": "^2.0.0-beta.17",
     "@tiptap/extension-history": "^2.0.0-beta.15",
     "@tiptap/extension-italic": "^2.0.0-beta.15",
     "@tiptap/extension-link": "^2.0.0-beta.19",
     "@tiptap/extension-paragraph": "^2.0.0-beta.17",
     "@tiptap/extension-placeholder": "^2.0.0-beta.27",
     "@tiptap/extension-text": "^2.0.0-beta.13",
-    "@tiptap/react": "^2.0.0-beta.60",
-    "@usedapp/core": "^0.4.4",
+    "@tiptap/react": "^2.0.0-beta.72",
+    "@usedapp/core": "^0.5.0",
     "@web3-react/abstract-connector": "^6.0.7",
     "@web3-react/core": "^6.1.1",
     "@web3-react/injected-connector": "^6.0.7",
@@ -47,12 +47,12 @@
     "gray-matter": "^4.0.3",
     "is-plain-object": "^5.0.0",
     "lodash": "^4.17.21",
-    "next": "11.1.0",
+    "next": "11.1.2",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
-    "react-dropzone": "^11.3.4",
+    "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.12.2",
     "react-icons": "^4.2.0",
     "react-markdown": "^7.0.1",
@@ -62,7 +62,7 @@
     "react-use": "^17.2.4",
     "redux-localstorage-simple": "^2.4.1",
     "remark-gfm": "^2.0.0",
-    "sass": "^1.38.0",
+    "sass": "^1.42.1npm i",
     "styled-components": "^5.3.0",
     "swiper": "^7.0.1",
     "universal-cookie": "^4.0.4",
@@ -70,12 +70,12 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
-    "@types/react": "17.0.19",
+    "@types/react": "17.0.24",
     "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.12",
     "@types/swiper": "^5.4.3",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "typescript": "4.3.5"
+    "eslint-config-next": "11.1.2",
+    "typescript": "^4.3.5"
   }
 }
