drag and drop reorder of objects, integration of new buyFirstAvailable, more improvements

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -11,7 +11,7 @@
   "source": "src/index.ts",
   "main": "dist/index.js",
   "private": true,
-  "typings": "src/index.d.ts",
+  "typings": "src/index.ts",
   "files": [
     "dist"
   ]
