--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -71,11 +71,13 @@
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
     "@types/react": "17.0.24",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.12",
     "@types/swiper": "^5.4.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "react-beautiful-dnd": "^13.1.0",
     "typescript": "^4.4.3"
   }
 }
