document new .env settings

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,19 @@ DEV_FORWARD_MAILHOG_DASHBOARD_PORT=4404
 APP_NAME="Open AR"
 BASE_URL_DAPP=http://localhost:4400
 BASE_URL_API=http://localhost:4401
+BASE_URL_IPFS_API=/ip4/0.0.0.0/tcp/5001
 BASE_URL_SUBGRAPH=http://127.0.0.1:8000/subgraphs/name/pankegallery/openar-v1
+
+#BASE_URL_API=https://api.openar.art
+#BASE_URL_DAPP=https://openar.eu.ngrok.io
+#BASE_URL_API=https://openarapi.eu.ngrok.io
+
+DATABASE_URL="postgresql://openar:openar@localhost:4533/openar?schema=public"
+
+# Replace this hardhat default wallet PK with your own "loaded wallet PK"
+PRIVATE_KEY_MINT=0x.....
+RPC_ENDPOINT=http://127.0.0.1:8545
+
 
 DATABASE_URL="postgresql://openar:openar@localhost:4532/openar?schema=public"
 
