--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -61,6 +61,7 @@
     "react-spinners": "^0.11.0",
     "react-use": "^17.2.4",
     "redux-localstorage-simple": "^2.4.1",
+    "rehype-react": "^7.0.3",
     "remark-gfm": "^2.0.0",
     "sass": "^1.42.1npm i",
     "styled-components": "^5.3.0",
