--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "start:api": "npm run app:api:start",
     "start:dapp": "npm run app:dapp:start",
     "dev": "concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#f41788,#c8b320\" \"npm run package:crypto:dev\" \"npm run app:api:dev\" \"sleep 20 && npm run app:dapp:dev\"",
-    "dev:dapp": "concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#c8b320\" \"npm run package:crypto:dev\" \"npm run app:dapp:dev\"",
-    "dev:api": "concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#f41788\" \"npm run package:crypto:dev\" \"sleep 5 && npm run app:api:dev\"",
+    "dev:dapp": "package:contracts:build & concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#c8b320\" \"npm run package:crypto:dev\" \"npm run app:dapp:dev\"",
+    "dev:api": "package:contracts:build & concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#f41788\" \"npm run package:crypto:dev\" \"sleep 5 && npm run app:api:dev\"",
     "build:api": "NODE_ENV=production npm run package:crypto:build && npm run app:api:build",
     "app:api:dev": "concurrently -k -p \"[{name}]\" -n \"BABEL,NODE,TS\" -c \"#d531f5,#4d5ffa,#09e3b4\" \"npm run app:api:dev:watch:babel\" \"sleep 5 && npm run app:api:dev:watch:nodemon\" \"sleep 5 && npm run app:api:dev:watch:typings\"",
     "app:api:dev:watch:babel": "NODE_ENV=development rimraf ./apps/api/build && babel ./apps/api/src --watch --out-dir ./apps/api/build --extensions .ts",
