Readme update with dev instructions

--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "dev": "concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#f41788,#c8b320\" \"npm run package:crypto:dev\" \"npm run app:api:dev\" \"sleep 20 && npm run app:dapp:dev\"",
     "dev:dapp": "package:contracts:build & concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#c8b320\" \"npm run package:crypto:dev\" \"npm run app:dapp:dev\"",
     "dev:api": "package:contracts:build & concurrently -k -p \"[{name}]\" -n \"CRYPTO,API,DAPP\" -c \"#86bce3,#f41788\" \"npm run package:crypto:dev\" \"sleep 5 && npm run app:api:dev\"",
-    "build:api": "NODE_ENV=production npm run package:crypto:build && npm run app:api:build",
+    "build:api": "cross-env NODE_ENV=production npm run package:crypto:build && npm run app:api:build",
     "app:api:dev": "concurrently -k -p \"[{name}]\" -n \"BABEL,NODE,TS\" -c \"#d531f5,#4d5ffa,#09e3b4\" \"npm run app:api:dev:watch:babel\" \"sleep 5 && npm run app:api:dev:watch:nodemon\" \"sleep 5 && npm run app:api:dev:watch:typings\"",
-    "app:api:dev:watch:babel": "NODE_ENV=development rimraf ./apps/api/build && babel ./apps/api/src --watch --out-dir ./apps/api/build --extensions .ts",
-    "app:api:dev:watch:nodemon": "NODE_ENV=development env-cmd -f ./.env nodemon --watch ./apps/api/build ./apps/api/build/index.js",
-    "app:api:dev:watch:typings": "NODE_ENV=development tsc ./apps/api/src/*.ts --target 'es2021' --moduleResolution 'node' --watch --declaration --esModuleInterop --noEmit --preserveWatchOutput",
-    "app:api:build": "NODE_ENV=production rimraf ./apps/api/build && npm run app:api:babel",
-    "app:api:deploy": "NODE_ENV=production rimraf ./apps/api/build && rimraf ./apps/api/x && npm run app:api:babel && mv ./apps/api/live ./apps/api/x && mv ./apps/api/build ./apps/api/live && rimraf ./apps/api/x && openar_api_restart",
-    "app:api:start:build": "NODE_ENV=production node ./apps/api/build/index.js",
-    "app:api:start": "NODE_ENV=production node ./apps/api/live/index.js",
-    "app:api:babel": "NODE_ENV=production babel ./apps/api/src --out-dir ./apps/api/build --extensions .ts",
+    "app:api:dev:watch:babel": "cross-env NODE_ENV=development rimraf ./apps/api/build && babel ./apps/api/src --watch --out-dir ./apps/api/build --extensions .ts",
+    "app:api:dev:watch:nodemon": "cross-env NODE_ENV=development env-cmd -f ./.env nodemon --watch ./apps/api/build ./apps/api/build/index.js",
+    "app:api:dev:watch:typings": "cross-env NODE_ENV=development tsc ./apps/api/src/*.ts --target 'es2021' --moduleResolution 'node' --watch --declaration --esModuleInterop --noEmit --preserveWatchOutput",
+    "app:api:build": "cross-env NODE_ENV=production rimraf ./apps/api/build && npm run app:api:babel",
+    "app:api:deploy": "cross-env NODE_ENV=production rimraf ./apps/api/build && rimraf ./apps/api/x && npm run app:api:babel && mv ./apps/api/live ./apps/api/x && mv ./apps/api/build ./apps/api/live && rimraf ./apps/api/x && openar_api_restart",
+    "app:api:start:build": "cross-env NODE_ENV=production node ./apps/api/build/index.js",
+    "app:api:start": "cross-env NODE_ENV=production node ./apps/api/live/index.js",
+    "app:api:babel": "cross-env NODE_ENV=production babel ./apps/api/src --out-dir ./apps/api/build --extensions .ts",
     "app:api:lint": "eslint ./apps/api/src --ext .js,.ts --ignore-pattern nexus-typegen.ts",
     "app:api:nexus": "node --loader ts-node/esm --experimental-specifier-resolution=node ./apps/api/src/nexus-graphql/schema.ts",
     "app:api:db:push": "prisma db push",
@@ -35,20 +35,21 @@
     "app:api:db:generate": "prisma generate",
     "app:api:db:studio": "prisma studio",
     "app:api:db:seed": "node ./apps/api/build/db/seeds/resetdb.js",
-    "app:api:db:dev:seed": "NODE_ENV=development dotenv -e .env -- node --loader ts-node/esm ./apps/api/src/db/seeds/resetdb.ts",
-    "app:dapp:start": "NODE_ENV=production npm run start -w dapp",
-    "app:dapp:build": "NODE_ENV=production npm run package:crypto:build && npm run build -w dapp",
-    "app:dapp:deploy": "NODE_ENV=production npm run package:crypto:build && npm run build -w dapp && openar_dapp_restart",
-    "app:dapp:dev": "PORT=$(grep DEV_DAPP_PORT .env | cut -d '=' -f2) NEXT_PUBLIC_API_URL=$(grep '^BASE_URL_API' .env | cut -d '=' -f2) npm run dev -w dapp",
+    "app:api:db:dev:seed": "cross-env NODE_ENV=development dotenv -e .env -- node --loader ts-node/esm ./apps/api/src/db/seeds/resetdb.ts",
+    "app:dapp:start": "cross-env NODE_ENV=production npm run start -w dapp",
+    "app:dapp:build": "cross-env NODE_ENV=production npm run package:crypto:build && npm run build -w dapp",
+    "app:dapp:deploy": "cross-env NODE_ENV=production npm run package:crypto:build && npm run build -w dapp && openar_dapp_restart",
+    "app:dapp:dev:correct": "cross-env PORT=$(grep DEV_DAPP_PORT .env | cut -d '=' -f2) NEXT_PUBLIC_API_URL=$(grep '^BASE_URL_API' .env | cut -d '=' -f2) npm run dev -w dapp",
+    "app:dapp:dev": "cross-env PORT=5005 NEXT_PUBLIC_API_URL=http://127.0.0.1:3001 npm run dev -w dapp",
     "app:dapp:lint": "npm run lint -w dapp",
     "package:contracts:lint": "eslint ./packages/contracts/src --ext .js,.ts",
-    "package:contracts:build": "NODE_ENV=production rimraf ./packages/contracts/dist && tsc --project ./packages/contracts/tsconfig.json",
+    "package:contracts:build": "cross-env NODE_ENV=production rimraf ./packages/contracts/dist && tsc --project ./packages/contracts/tsconfig.json",
     "package:contracts:dev": "npm run package:contracts:build && concurrently -k -p \"[{name}]\" -n \"TSC\" -c \"#d531f5\" \"npm run package:contracts:watch:tsc\"",
-    "package:contracts:watch:tsc": "NODE_ENV=development  tsc --project ./packages/contracts/tsconfig.json --watch --preserveWatchOutput",
+    "package:contracts:watch:tsc": "cross-env NODE_ENV=development  tsc --project ./packages/contracts/tsconfig.json --watch --preserveWatchOutput",
     "package:crypto:lint": "eslint ./packages/crypto/src --ext .js,.ts",
-    "package:crypto:build": "NODE_ENV=production npm run package:contracts:build && rimraf ./packages/crypto/dist && tsc --project ./packages/crypto/tsconfig.json",
+    "package:crypto:build": "cross-env NODE_ENV=production npm run package:contracts:build && rimraf ./packages/crypto/dist && tsc --project ./packages/crypto/tsconfig.json",
     "package:crypto:dev": "npm run package:contracts:build && concurrently -k -p \"[{name}]\" -n \"TSC\" -c \"#d531f5\" \"npm run package:crypto:watch:tsc\"",
-    "package:crypto:watch:tsc": "NODE_ENV=development  tsc --project ./packages/crypto/tsconfig.json --watch --preserveWatchOutput"
+    "package:crypto:watch:tsc": "cross-env NODE_ENV=development  tsc --project ./packages/crypto/tsconfig.json --watch --preserveWatchOutput"
   },
   "lint-staged": {
     "packages/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -70,6 +71,7 @@
     "@typescript-eslint/parser": "^4.30.0",
     "babel-plugin-add-import-extension": "^1.6.0",
     "concurrently": "^6.2.0",
+    "cross-env": "^7.0.3",
     "dotenv-cli": "^4.0.0",
     "env-cmd": "^10.1.0",
     "eslint": "^7.32.0",
