--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "apollo-server-types": "^3.0.1",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bree": "^6.2.1",
     "chalk": "^4.1.2",
