--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,6 +40,7 @@
     "ethers": "^5.4.7",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
+    "generate-password": "^1.7.0",
     "graphql": "^15.5.1",
     "graphql-parse-resolve-info": "^4.12.0",
     "graphql-request": "^3.5.0",
