--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,7 @@ build/
 # misc
 .DS_Store
 *.pem
+temp/*
 
 # debug
 npm-debug.log*
@@ -185,5 +186,4 @@ dist/
 !public/ar/.keep
 !public/img/.keep
 dist/
-# editors
-.brackets.json
+
