--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "apps/*"
   ],
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "react-error-boundary": "^4.0.11"
   },
   "prisma": {
     "schema": "./apps/api/prisma/schema.prisma"
