working version locally larissa

--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.8",
     "@datepicker-react/styled": "^2.8.0",
+    "@emotion/styled": "^11.11.0",
     "@ethersproject/providers": "^5.4.1",
     "@ethersproject/units": "^5.4.0",
     "@fontsource/manrope": "^4.5.0",
@@ -44,6 +45,7 @@
     "cookie": "^0.4.0",
     "detect-it": "^4.0.1",
     "ethers": "^5.4.1",
+    "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
     "is-plain-object": "^5.0.0",
     "leaflet": "^1.9.4",
