--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -24,6 +24,7 @@
     "@openar/contracts": "^1.0.0",
     "@openar/crypto": "^1.0.0",
     "@reduxjs/toolkit": "^1.6.1",
+    "@tiptap/core": "^2.1.12",
     "@tiptap/extension-bold": "^2.0.0-beta.15",
     "@tiptap/extension-document": "^2.0.0-beta.13",
     "@tiptap/extension-dropcursor": "^2.0.0-beta.18",
@@ -35,6 +36,7 @@
     "@tiptap/extension-paragraph": "^2.0.0-beta.17",
     "@tiptap/extension-placeholder": "^2.0.0-beta.27",
     "@tiptap/extension-text": "^2.0.0-beta.13",
+    "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.0.0-beta.72",
     "@usedapp/core": "^0.5.0",
     "@web3-react/abstract-connector": "^6.0.7",
