--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -61,7 +61,7 @@
     "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.15.4",
     "react-icons": "^4.2.0",
-    "react-leaflet": "^3.2.5",
+    "react-leaflet": "3.2.2",
     "react-markdown": "^7.0.1",
     "react-redux": "^7.2.4",
     "react-remove-scroll": "^2.4.1",
