--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -24,6 +24,7 @@
     "@openar/contracts": "^1.0.0",
     "@openar/crypto": "^1.0.0",
     "@reduxjs/toolkit": "^1.6.1",
+    "@socialgouv/matomo-next": "^1.8.0",
     "@tiptap/core": "^2.1.12",
     "@tiptap/extension-bold": "^2.1.12",
     "@tiptap/extension-document": "^2.1.12",
